[package]
name = "palpath"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap_complete = "4.4.9"
clap = {version="4.4.12", features=["derive"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8.5"
csv = "1.3.0"
anyhow = "1.0"
